--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
     "singleQuote": true,
-    "trailingComa": "es5",
+    "trailingComma": "es5",
     "semi": true,
     "tabWidth": 2,
     "printWidth": 100,
     "bracketSpacing": true,
     "arrowParens": "avoid"
 }
-
